hphp/test/zend/good/ext/standard/tests/file/copy_variation2.php.skipif
<?hh
<<__EntryPoint>> function main() {
if(substr(PHP_OS, 0, 3) == "WIN")
  die("skip do not run on Windows");
}
