hphp/test/zend/bad/ext/standard/tests/file/copy_variation4.php.skipif
<?php
if(substr(PHP_OS, 0, 3) == "WIN")
  die("skip Do not run on Windows");

if(substr(PHP_OS, 0, 3) == "AIX")
  die("skip Do not run on AIX");
?>